# MCTP

./: AGENTS.md  MCTP_Roadmap_v2-2 Final.docx  MCTP_Roadmap_v4_0_Synthesis.docx  MCTP_context.md  MCTP_contracts_status.md  README.md  RULES.md  pyproject.toml  run_backtest.py  run_backtest_csv.py  run_paper_runtime.py  run_testnet_platform.py  testnet_snapshot.json
.claude/: settings.local.json
artifacts/: backtest_trades.csv
docs/: README.md  v1_7_incident_journal_template.md  v1_7_operator_intervention_rules.md  v1_7_operator_runbook.md  v1_7_pre_live_checklist.md  v1_7_to_v2_0_readiness_gate.md
mctp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_backtest_affordability.py  test_backtest_csv_loader.py  test_backtest_hot_path_performance.py  test_backtest_trade_export.py  test_post_v12_logic_fix.py  test_post_v12_maintenance_batch2.py  test_post_v12_polish.py  test_post_v1_6_reliability.py  test_post_v1_7_block_c_runtime.py  test_run_backtest_csv.py  test_run_testnet_platform.py  test_timeframe_architecture.py  test_v00_contracts.py  test_v01_execution.py  test_v02_risk.py  test_v03_sizing.py  test_v04_lifecycle.py  test_v05_storage.py  test_v06_portfolio.py  test_v07_orders.py  test_v08_strict_accounting.py  test_v09_backtest.py  test_v10_analytics.py  test_v11_indicator_engine.py  test_v12_paper_runtime.py  test_v1_0_testnet_adapter.py  test_v1_1_exchange_truth.py  test_v1_2_startup_sync.py  test_v1_3_restart_reconciliation.py  test_v1_4_observability.py  test_v1_5_alerting.py  test_v1_6_acceptance_polish.py  test_v2_0_mtf_strategy.py  (+9 more)
(+102 files in other folders)
