[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mctp"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]
runtime = ["websockets>=12"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
